@@ -9,6 +9,8 @@
   * Fix bug 3526653 : SaveImageAsPlugIn did not scale the RasterImage when
     it was exported to a wider image (the new RendererFactory framework was not 
     used by RasterImageRenderer)
+  * Fix a regression in AttributeTablePanel : user can again copy/paste to an
+    external application
 
 2012-08-29 mmichaud <michael.michaud@free.fr>
   * Fix bug 3560828 by changing the dashed red line to a solid red line while
